--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,7 @@ http {
         root /usr/share/nginx/html;
         index index.html;
         error_page 404 /404.html;
+        port_in_redirect off;
         location / {
             autoindex off;
             try_files $uri.html $uri $uri/ =404;
